Update 2.Q.1 Easy Questions.md

--- a/DOMAIN2: Asset Security/2.Q.1 Easy Questions.md
+++ b/DOMAIN2: Asset Security/2.Q.1 Easy Questions.md
@@ -153,6 +153,237 @@ Find out more here
 
 ---
 
+6. Mark needs to recommend an Administrative Control to address the risks associated with data remanence. Which of the following options is the most effective solution?
 
+(A) Encryption
 
+(B) Data retention policies
 
+(C) Inbound Data filtering
+
+(D) Degaussing
+
+<details> <summary>Show answer</summary>
+
+Correct Answer: (B)
+
+Data retention policies are administrative controls that define how long data should be stored and when it must be securely disposed of. By enforcing these policies, organizations can minimize the risk of data remanence—residual data remaining after deletion—and reduce the likelihood of unauthorized access or exposure. Retention policies manage data throughout its lifecycle, ensuring compliance and mitigating security risks.
+
+Incorrect Answers:
+
+(A) Encryption
+Encryption is a technical control that secures data while in transit or at rest. Although it protects data confidentiality, it does not address administrative procedures for securely disposing of or managing residual data.
+
+(C) Inbound Data filtering
+Inbound data filtering is a technical control that inspects and blocks malicious or unauthorized incoming data. It does not mitigate risks associated with leftover or residual data (data remanence).
+
+(D) Degaussing
+Degaussing is a physical control that erases data from magnetic storage devices using strong magnetic fields. While effective for removing residual data, it is not an administrative control, and is primarily a technical or physical method for secure disposal.
+
+</details>
+
+---
+
+7. You are allocating resources to different information life cycle steps. Which of the following steps will need the most resources to preserve its confidentiality, integrity, and availability (CIA)?
+
+(A) Disposal
+
+(B) Use
+
+(C) Archival
+
+(D) Acquisition
+
+<details> <summary>Show answer</summary>
+
+Correct Answer: (B)
+
+The Use step in the information lifecycle requires the most resources to maintain confidentiality, integrity, and availability. During this phase, information is actively accessed, processed, and shared by authorized users, increasing the potential for security incidents. Organizations must implement robust access controls, monitoring, encryption, and anomaly detection to protect sensitive data while ensuring it remains available for legitimate use.
+
+Incorrect Answers:
+
+(A) Disposal
+Disposal focuses on securely removing or destroying information that is no longer needed. While proper disposal is essential for confidentiality and integrity, it does not demand as many ongoing resources as the active Use phase.
+
+(C) Archival
+Archival involves long-term storage and retention, which requires resources for secure storage and controlled access. However, the data is not actively being used, so the risks and associated resource needs are lower than during active usage.
+
+(D) Acquisition
+Acquisition refers to obtaining new information assets and performing initial security assessments or classification. While important, it typically requires fewer ongoing resources than the Use phase since the data is not yet actively processed or shared.
+
+Overall Explanation:
+From a security standpoint, data use is the stage with the highest exposure to confidentiality breaches, integrity risks, and availability challenges. During this phase, sensitive information can be inadvertently or maliciously exposed, altered, or disrupted. Therefore, organizations must allocate the most resources here to implement security measures effectively and protect the integrity and availability of actively used data.
+
+Find out more here
+
+</details>
+
+---
+
+8. As the workforce and data storage capacity in your company are expanding, and considering the current classification levels of low, medium, and high confidentiality, what steps should you take to restructure data classification to accommodate the growing number of employees?
+
+(A) Technically escalate the issue to sysadmins
+
+(B) Increase classification granularity
+
+(C) Re-analyze classification requirements
+
+(D) Decrease classification granularity
+
+<details> <summary>Show answer</summary>
+
+Correct Answer: (C)
+
+Re-analyzing classification requirements ensures that the data classification system aligns with the company’s evolving needs. As the organization grows, new data types, access requirements, and operational processes may emerge. Reassessing the classification criteria allows the organization to maintain proper data governance, compliance, and security without unnecessary complexity or risk.
+
+Incorrect Answers:
+
+(A) Technically escalate the issue to sysadmins
+Escalating to sysadmins is unnecessary at this stage. Data classification is a governance and policy decision, not a technical system problem.
+
+(B) Increase classification granularity
+Simply increasing granularity without assessment may overcomplicate the classification system, creating confusion and administrative overhead. A proper analysis is needed first to determine if finer granularity is required.
+
+(D) Decrease classification granularity
+Reducing granularity could oversimplify data handling, potentially exposing sensitive information. Any adjustments should be based on a thorough review of current and future requirements.
+
+Overall Explanation:
+Growth in workforce and data does not automatically dictate a need for more granular classifications. A careful review of classification requirements ensures that data governance remains effective, access controls are appropriate, and regulatory compliance is maintained.
+
+</details>
+
+---
+
+9. You have determined that all incoming data to your company must be accompanied by metadata. Easy things first: the first condition is that system metadata must be correctly understood. Which of the following are system metadata?
+
+(A) Author, Owner
+
+(B) Classification, Project, Owner
+
+(C) Author, Date of Creation
+
+(D) Owner, Date of Creation, Permission
+
+<details> <summary>Show answer</summary>
+
+Correct Answer: (C)
+
+Author and Date of Creation are considered system metadata because they describe the technical aspects of data, typically generated and managed automatically by the system or software handling the data. This metadata helps track the origin, creation time, and lifecycle of information, which is essential for data management, traceability, and system operations.
+
+Incorrect Answers:
+
+(A) Author, Owner
+While “Author” is system metadata, “Owner” is generally a business or organizational attribute, not automatically generated by the system.
+
+(B) Classification, Project, Owner
+These are business process metadata, describing the context, meaning, and purpose of the data rather than its technical characteristics.
+
+(D) Owner, Date of Creation, Permission
+“Date of Creation” is system metadata, but “Owner” and “Permission” pertain more to business context and access control, not the system-generated technical properties.
+
+Overall Explanation:
+Metadata is “data about data” and can be categorized into system metadata and business process metadata. System metadata includes technical attributes like author, creation date, file format, and size, which are automatically managed by the system. Business process metadata provides contextual or operational information, like ownership, project association, or classification, which is generally assigned manually. Understanding this distinction is critical for proper data governance and lifecycle management.
+
+</details>
+
+---
+
+10. Imagine you are in a bustling marketplace, filled with a variety of stalls selling everything from software to electronics. Amidst the hustle and bustle, you come across a stall that seems to be selling software and hardware at a fraction of their usual price. Upon closer inspection, you realize that these are not original products, but rather, they are unauthorized replicas, meticulously crafted to mimic the original items. Which of the following options most accurately characterizes this act of creating and selling fake or unauthorized replicas of products?
+
+(A) Product Tampering
+
+(B) Counterfeit
+
+(C) Implant
+
+(D) Malware
+
+<details> <summary>Show answer</summary>
+
+Correct Answer: (B)
+
+Counterfeit refers to the act of creating and selling fake or unauthorized replicas of products, typically with the intention of deceiving consumers into believing they are buying the original item. In this scenario, the unauthorized replicas being sold in the marketplace fit the definition of counterfeit products.
+
+Incorrect Answers:
+
+(A) Product Tampering
+Product tampering involves altering or contaminating a product in a way that could potentially harm consumers or mislead them about a product’s integrity. It does not specifically describe the creation and sale of unauthorized replicas.
+
+(C) Implant
+Implant typically refers to inserting a device or material into a living organism or system, not producing fake or unauthorized replicas of products.
+
+(D) Malware
+Malware is malicious software intended to disrupt, damage, or gain unauthorized access to computer systems. It is unrelated to producing counterfeit physical products.
+
+Overall Explanation:
+Producing fake or unauthorized replicas of products is called counterfeiting. Counterfeit goods are imitation products designed to look like genuine items, deceiving consumers and potentially causing legal, financial, or safety risks. Understanding this distinction is important in information and asset security, as counterfeiting can affect software, hardware, and digital products.
+
+</details>
+
+---
+
+11. Each stage of the supply chain carries inherent risks. When does product tampering usually take place in the supply and delivery chain?
+
+(A) During its manufacture, in the supplier premises
+
+(B) After the product is connected to the internet for the first time
+
+(C) After the product reaches the end consumer
+
+(D) After its manufacture and before it reaches the end consumer
+
+<details> <summary>Show answer</summary>
+
+Correct Answer: (D)
+
+Product tampering typically occurs after the product has been manufactured but before it reaches the end consumer. This is a critical phase in the supply chain where malicious actors may attempt to tamper with the product during storage, transportation, or distribution, potentially causing harm or unauthorized access to sensitive information.
+
+Incorrect Answers:
+
+(A) During its manufacture, in the supplier premises
+While security measures are essential during manufacturing, tampering is less likely at this stage because quality control and oversight mechanisms are in place.
+
+(B) After the product is connected to the internet for the first time
+This stage focuses on functionality and connectivity. Product tampering refers to physical alterations, not cybersecurity issues.
+
+(C) After the product reaches the end consumer
+By the time the product is in the hands of the consumer, opportunities for tampering are limited. Most tampering occurs earlier in transit or storage.
+
+Overall Explanation:
+The most vulnerable point for product tampering is between manufacture and delivery. During this phase, products may be exposed to inadequate handling, malicious interference, or contamination. Organizations must implement strong security measures throughout transportation and storage to mitigate these risks and ensure product integrity.
+
+</details>
+
+---
+
+12. While employed at a medium-sized enterprise, you are responsible for data classification. What is the foremost aspect to consider when formulating a Data Classification policy among the following options?
+
+(A) The highest classification level must be "top-secret"
+
+(B) Each classification level should have its own handling and destruction requirements
+
+(C) All information should be tagged as "proprietary"
+
+(D) The lowest classification level must be "public" and the highest should be "top-secret"
+
+<details> <summary>Show answer</summary>
+
+Correct Answer: (B)
+
+Each classification level having its own handling and destruction requirements ensures that sensitive data is protected appropriately according to its sensitivity. This approach helps maintain confidentiality and integrity throughout the data lifecycle and ensures proper disposal of information based on its classification.
+
+Incorrect Answers:
+
+(A) The highest classification level must be "top-secret"
+While having a “top-secret” level can be important for highly sensitive data, it is not the main focus. The key is defining clear handling and disposal requirements for all levels.
+
+(C) All information should be tagged as "proprietary"
+Tagging everything as “proprietary” does not create a structured classification system. Different levels of sensitivity require distinct security measures.
+
+(D) The lowest classification level must be "public" and the highest should be "top-secret"
+Although common, defining levels alone is not sufficient. The priority is specifying how each level should be handled and destroyed.
+
+Overall Explanation:
+Formulating a data classification policy is about tailoring protection and disposal procedures to the sensitivity of data. Different types of data demand different security measures. The classification levels themselves are secondary; the critical aspect is the operational handling, access, and destruction requirements that align with each classification. This ensures that sensitive information remains secure and is only accessible to authorized personnel.
+
+</details>
