Update 2.Q.1 Easy Questions.md

--- a/DOMAIN2: Asset Security/2.Q.1 Easy Questions.md
+++ b/DOMAIN2: Asset Security/2.Q.1 Easy Questions.md
@@ -387,3 +387,261 @@ Overall Explanation:
 Formulating a data classification policy is about tailoring protection and disposal procedures to the sensitivity of data. Different types of data demand different security measures. The classification levels themselves are secondary; the critical aspect is the operational handling, access, and destruction requirements that align with each classification. This ensures that sensitive information remains secure and is only accessible to authorized personnel.
 
 </details>
+
+---
+
+13. While working for a medium-sized enterprise, you are tasked with data classification responsibilities. Which of the following statements is the least accurate when considering Classification Criteria?
+
+(A) Both hardware and software should be classified
+
+(B) Also backed up data must be classified
+
+(C) The lowest classification level must be "Public"
+
+(D) Every classification level must have its destruction requirements
+
+<details> <summary>Show answer</summary>
+
+Correct Answer: (C)
+
+The statement “The lowest classification level must be 'Public'” is the least accurate because classification systems are context-dependent. Organizations may define the lowest level differently—sometimes as “Unclassified” or another designation. There is no universal mandate that it must be “Public.”
+
+Incorrect Answers:
+
+(A) Both hardware and software should be classified
+Accurate. Classifying hardware and software helps manage access, usage, and protection policies for all information assets.
+
+(B) Also backed up data must be classified
+Accurate. Backups should retain the original data classification to ensure consistent protection and handling.
+
+(D) Every classification level must have its destruction requirements
+Accurate. Each classification level requires specific handling and destruction procedures to maintain confidentiality and compliance throughout the information lifecycle.
+
+Overall Explanation:
+Classification systems must be flexible and tailored to the organization’s needs. While many companies define a “Public” level, it is not a universal requirement. What matters most is that all classification levels have clearly defined handling, access, and destruction policies, and that backups and assets like hardware and software maintain consistent classification.
+
+</details>
+
+---
+
+14. Among the security roles listed, which one is typically responsible for handling daily IT tasks such as data backup?
+
+(A) Data Owner
+
+(B) Senior Sysadmin
+
+(C) Data Custodian
+
+(D) IT Practitioner
+
+<details> <summary>Show answer</summary>
+
+Correct Answer: (C)
+
+The data custodian is responsible for the daily IT activities related to data, including tasks such as backups. This role focuses on the hands-on management and implementation of security measures for data, ensuring proper handling, storage, and protection according to the data owner’s policies.
+
+Incorrect Answers:
+
+(A) Data Owner
+Responsible for defining data classification, access policies, and overall governance, but not typically for daily IT operations like backups.
+
+(B) Senior Sysadmin
+May manage IT infrastructure and backup systems, but the role does not specifically convey responsibility for daily data backup. Responsibilities can vary widely depending on the organization.
+
+(D) IT Practitioner
+A general term for IT personnel; while they may perform IT tasks, it doesn’t specifically indicate responsibility for managing backups or implementing security controls.
+
+Overall Explanation:
+Data custodians act as the technical guardians of information assets. They implement security policies, perform routine maintenance like backups, and ensure that operational aspects of data protection align with governance defined by data owners. This separation of duties helps maintain both accountability and operational efficiency.
+
+</details>
+
+---
+
+15. Your company has implemented an Asset Security Policy that prescribes the disposal of hardware older than five years. You have a couple of devices slightly older than five years, but refurbished and well-performing. What should you do?
+
+(A) You give them to your colleagues
+
+(B) You Dispose them
+
+(C) You keep them in case of emergency
+
+(D) You use them for personal stuff
+
+<details> <summary>Show answer</summary>
+
+Correct Answer: (B)
+
+In adherence to the company's Asset Security Policy, hardware older than 5 years must be disposed of, regardless of its current performance or condition. Following the policy ensures compliance, reduces risks, and maintains consistency across the organization.
+
+Incorrect Answers:
+
+(A) You give them to your colleagues
+This violates the policy and introduces risks, including potential data leakage and lack of control over asset usage.
+
+(C) You keep them in case of emergency
+Retaining old hardware contradicts the policy and creates issues such as space shortages, theft risk, device failure, and potential data loss.
+
+(D) You use them for personal stuff
+Using company hardware for personal purposes breaches policy, introduces security risks, and may violate regulatory requirements.
+
+Overall Explanation:
+Policies like Asset Security and Disposal exist to mitigate risks, maintain regulatory compliance, and prevent operational or security issues. Even if hardware seems functional, adherence to the policy ensures proper lifecycle management, reduces potential liabilities, and enforces accountability within the organization.
+
+</details>
+
+---
+
+16. Data can exist in various states including at rest, referring to stored data on a storage device; in use, indicating data actively being processed or accessed; and in transit, denoting data moving between systems or locations over a network. Which of the following best depicts data at rest?
+
+(A) Data in a VPN tunnel
+(B) Data in RAM
+(C) Data in CPU
+(D) Data in a USB Pen Drive
+
+<details> <summary>Show answer</summary>
+
+Correct Answer: (D)
+
+Data in a USB Pen Drive represents data at rest because it is stored on a storage device and not actively being processed or transmitted. Data at rest typically resides on storage media such as hard drives, SSDs, backup tapes, or USB drives, and requires protection mechanisms like encryption and access control.
+
+Incorrect Answers:
+
+(A) Data in a VPN tunnel
+Represents data in transit, as it is moving between systems or locations over a network through a secure tunnel.
+
+(B) Data in RAM
+Represents data in use, since it’s actively being processed or accessed by the system. RAM is volatile and loses content when powered off.
+
+(C) Data in CPU
+Also represents data in use, as the CPU processes instructions and calculations on actively accessed data.
+
+Overall Explanation:
+Data at rest refers to information that is stored and not actively used or transferred. Protecting data at rest involves ensuring its confidentiality, integrity, and availability through measures such as disk encryption, secure storage, and proper access management.
+
+</details>
+
+---
+
+17. The use of Data Loss Prevention (DLP) solutions is increasing due to the growing importance of protecting sensitive data, compliance requirements, and the rise in sophisticated cyber threats targeting data breaches. Which operational task should you perform on data to enable the DLP system to apply suitable protections?
+
+(A) Protecting
+(B) Assessing
+(C) Policy writing
+(D) Labeling
+
+<details> <summary>Show answer</summary>
+
+Correct Answer: (D)
+
+Labeling data is a crucial operational task that enables the DLP system to apply suitable protections. By assigning sensitivity labels (such as “Confidential,” “Internal,” or “Public”), the DLP system can automatically recognize data types and enforce corresponding security policies—like blocking external sharing or encrypting files.
+
+Incorrect Answers:
+
+(A) Protecting
+Protecting data is the ultimate goal, but it’s a broader concept encompassing encryption, masking, and access controls. It’s not the specific operational task that prepares data for automated DLP enforcement.
+
+(B) Assessing
+Assessing involves evaluating data sensitivity and risk but doesn’t directly enable DLP systems to act. Labeling is what operationalizes these assessments into enforceable controls.
+
+(C) Policy writing
+Policy writing defines DLP rules and enforcement behaviors, but it’s an administrative configuration step—not an operational task performed on data itself.
+
+Overall Explanation:
+Labeling involves assigning classifications or tags to data based on its sensitivity or regulatory requirements. This allows DLP systems to recognize and automatically apply appropriate protections, ensuring compliance and minimizing the risk of data leakage.
+
+</details>
+
+---
+
+18. In a corporate setting where data security and compliance are paramount, what specific methodology and protocol will you implement to ensure the thorough erasure of all data bits on your hard drive, effectively replacing them with zeroes, as part of the data wiping process?
+
+(A) Clearing
+(B) Rewriting to zero
+(C) Zero Wiping
+(D) Zero Fill
+
+<details> <summary>Show answer</summary>
+
+Correct Answer: (D)
+
+Zero Fill — also called zeroing or zero-filling — is the process of overwriting all data on a storage device with zeroes. This ensures that all previous data is completely erased and replaced, making it an effective and recognized method for securely wiping data from hard drives or other storage media.
+
+Incorrect Answers:
+
+(A) Clearing
+Clearing is a broader term that may refer to several data removal techniques. While zero fill is one form of clearing, the term “clearing” alone does not specify overwriting with zeroes and may not guarantee full data eradication.
+
+(B) Rewriting to zero
+This phrase is not a standardized or recognized term in the context of secure data erasure. While conceptually similar to zero fill, it lacks precision and formal recognition in data sanitization standards.
+
+(C) Zero Wiping
+“Zero Wiping” is not a technically recognized term. It sounds similar but is incorrect—the standard terminology in professional and compliance frameworks (such as NIST SP 800-88) is Zero Fill.
+
+Overall Explanation:
+The Zero Fill process replaces every bit on a drive with zeroes, ensuring the complete erasure of any residual data. It is one of the most common and straightforward methods of secure data sanitization and is often performed before decommissioning or reusing storage devices.
+
+</details>
+
+---
+
+19. In the context of overseeing cybersecurity protocols for a multinational corporation’s Windows 11 systems responsible for credit card processing, where data security and compliance are paramount, what meticulous assessment process will you undertake to identify and select the most suitable security standard?
+
+(A) STRIDE
+(B) PCI DSS
+(C) CIS Windows 11 Baseline
+(D) CMM Maturity Level 6
+
+<details> <summary>Show answer</summary>
+
+Correct Answer: (B)
+
+PCI DSS (Payment Card Industry Data Security Standard) is the globally recognized framework for protecting cardholder data during storage, transmission, and processing.
+It defines comprehensive security requirements for systems involved in credit-card transactions—covering network protection, encryption, access control, monitoring, and compliance validation—making it the only correct choice in this context.
+
+Incorrect Answers:
+
+(A) STRIDE – A Microsoft threat-modeling framework (Spoofing, Tampering, Repudiation, Information Disclosure, Denial of Service, Elevation of Privilege). Useful for identifying software threats, but not a compliance or security standard for credit-card data.
+
+(C) CIS Windows 11 Baseline – Offers configuration best practices for Windows 11 but does not address the specialized compliance controls required by payment-card environments.
+
+(D) CMM Maturity Level 6 – Refers to process-improvement maturity in software engineering; it is not related to payment-card data security or regulatory compliance.
+
+Overall Explanation:
+PCI DSS is the definitive standard for organizations that handle credit-card transactions.
+It ensures that sensitive cardholder data is safeguarded across all systems, including Windows 11 workstations and servers, through mandatory technical and operational controls.
+
+</details>
+
+---
+
+20. You're a cybersecurity manager at a large financial institution responsible for ensuring compliance with data protection regulations. Given your role in overseeing the labeling of hardware and media according to the sensitivity of the contained data, considering factors such as data classification, labeling standards, and the importance of accurate identification in safeguarding confidential information, how would you approach your role?
+
+(A) Label the Hardware/Media with the average classification level of the contained data
+(B) Label Hardware only right before disposal
+(C) Ask the data custodian what is the proper classification level
+(D) Label the Hardware/Media with the highest classification level of the contained data
+
+<details> <summary>Show answer</summary>
+
+Correct Answer: (D)
+
+Labeling the hardware or media with the highest classification level of the contained data ensures that the strictest security controls are consistently applied.
+This practice prevents under-protection of highly sensitive data and aligns with the principle of safeguarding the most critical information within a system or asset.
+
+Incorrect Answers:
+
+(A) Label with the average classification level: Averaging classifications could expose high-value or sensitive data to inadequate protection. Security policies must always align with the most restrictive classification.
+
+(B) Label only before disposal: Labeling at the end of the hardware lifecycle overlooks the need for protection during use, transport, and storage. Labeling must occur as soon as data is placed on the device.
+
+(C) Ask the data custodian for the proper classification level: While collaboration with data custodians is valuable, the cybersecurity manager must ensure labeling adheres to organizational classification standards, not subjective decisions.
+
+Overall Explanation:
+Effective labeling reflects the highest sensitivity level of stored data, ensuring security controls—such as encryption, access restriction, and secure transport—are applied appropriately.
+This approach mitigates risks of data leakage, improper handling, and non-compliance with regulatory frameworks such as GDPR, PCI DSS, or ISO/IEC 27001.
+
+</details>
+
+---
+
