Update 2.Q.1 Easy Questions.md

--- a/DOMAIN2: Asset Security/2.Q.1 Easy Questions.md
+++ b/DOMAIN2: Asset Security/2.Q.1 Easy Questions.md
@@ -645,3 +645,143 @@ This approach mitigates risks of data leakage, improper handling, and non-compli
 
 ---
 
+21. You've been tasked with adapting the NSA Windows 11 hardening guidelines for your company's IT systems. What are the two processes you are likely to be involved in?
+
+(A) Scoping and Baselining
+(B) Customizing and Applying
+(C) Evaluating and Developing
+(D) Scoping and Tailoring
+
+<details> <summary>Show answer</summary>
+
+Correct Answer: (D)
+
+Scoping: Defines the boundaries and requirements of the security hardening process. It determines which systems and components are in scope for the guidelines.
+
+Tailoring: Involves customizing the guidelines to fit the specific needs and requirements of your company's IT systems, ensuring that the security measures are appropriate and effective.
+
+Incorrect Answers:
+
+(A) Scoping and Baselining: Baselining focuses on establishing a standard configuration but does not address the customization necessary to adapt NSA guidelines to an organization.
+
+(B) Customizing and Applying: While customizing is part of the process, "Applying" alone does not cover the full preparatory process of scoping and aligning guidelines with organizational context.
+
+(C) Evaluating and Developing: Evaluation and development are broader lifecycle activities and do not specifically capture the adaptation steps of scoping and tailoring.
+
+Overall Explanation:
+Adapting NSA Windows 11 hardening guidelines requires a two-step approach: first, scoping to understand which systems and security requirements are relevant; second, tailoring to modify and implement the guidelines according to organizational needs. This ensures security hardening is practical, effective, and aligned with company-specific IT systems.
+
+</details>
+
+---
+
+22. You need to draft a Statement of Work for the replacement of HDDs in your company. What will be your initial consideration to determine a fair price for the HDDs?
+
+(A) The EOL (End of Life) of the HDDs
+(B) The company budget for Information Security
+(C) The value of the Data contained in the HDDs
+(D) The HDDs warranty duration
+
+<details> <summary>Show answer</summary>
+
+Correct Answer: (C)
+
+The most relevant factor when determining the fair price for HDDs is the value of the data contained in the HDDs. Understanding the importance and sensitivity of the data helps assess the level of security, redundancy, and performance required from the replacement drives. The value of data often outweighs hardware cost considerations, as protecting and preserving critical information is paramount.
+
+Incorrect Answers:
+
+(A) The EOL (End of Life) of the HDDs: While knowing the drives’ EOL is important for planning replacement, it doesn’t directly determine their fair price. Pricing is more influenced by the data value and required specifications.
+
+(B) The company budget for Information Security: The budget informs overall project feasibility but does not dictate the fair market price of HDDs. Budget is secondary to assessing the data’s value.
+
+(D) The HDDs warranty duration: Warranty length indicates reliability and support but is not the primary factor in setting a fair price. Data value and required performance features are more critical.
+
+Overall Explanation:
+When procuring storage hardware, the value of the data stored drives decision-making. High-value or sensitive data may require premium drives, encryption, redundancy, or faster performance, justifying higher costs. This approach ensures data security and business continuity, rather than simply choosing based on hardware age, budget, or warranty.
+
+</details>
+
+---
+
+23. Several factors need to be considered when making an insurance decision, including the type and level of coverage needed, the risk profile of the insured entity, past claims history, regulatory requirements, geographic location, and the financial stability and reputation of the insurance provider. But which of the following best describes a cybersecurity insurance?
+
+(A) Is one step in the supply chain of cybersecurity
+(B) Is the last chance to mitigate cyber-attacks
+(C) It is a specialized insurance product designed to help organizations protect against financial losses resulting from cyber-related incidents
+(D) It is the only way to transfer accountability to 3rd parties for financial losses resulting from cyber-related incidents
+
+<details> <summary>Show answer</summary>
+
+Correct Answer: (C)
+
+Cybersecurity insurance is a specialized insurance product that helps organizations protect against financial losses resulting from cyber-related incidents. It is a risk transfer mechanism, providing financial support after an event occurs, rather than preventing the incident itself.
+
+Incorrect Answers:
+
+(A) Is one step in the supply chain of cybersecurity: Cybersecurity insurance is not part of the supply chain. It is a post-incident financial protection measure, not an operational or technical step.
+
+(B) Is the last chance to mitigate cyber-attacks: Insurance does not mitigate attacks. Mitigation involves proactive controls like firewalls, monitoring, and security policies. Insurance provides financial coverage after the attack.
+
+(D) It is the only way to transfer accountability to 3rd parties for financial losses resulting from cyber-related incidents: Accountability cannot be transferred. Insurance only provides financial compensation; it does not transfer legal or regulatory responsibility.
+
+Overall Explanation:
+Cybersecurity insurance complements an organization’s security posture by providing financial protection against losses from data breaches, ransomware, or other cyber incidents. It is a risk management tool, not a substitute for proper cybersecurity controls.
+
+</details>
+
+---
+
+24. As the individual overseeing workstations across the company and recognizing that some of these workstations manage proprietary information, which choice most accurately outlines the appropriate course of action at the conclusion of their lifecycle?
+
+(A) Formatting
+(B) Erasing
+(C) Sanitization
+(D) Destruction
+
+<details> <summary>Show answer</summary>
+
+Correct Answer: (C) Sanitization
+
+Sanitization is the process of securely removing all data from a workstation to ensure that no sensitive information remains. This is crucial for workstations handling proprietary or confidential information to prevent data leakage or unauthorized access.
+
+Incorrect Answers:
+
+(A) Formatting: Formatting a hard drive does not completely erase data; it can often be recovered with data recovery tools.
+
+(B) Erasing: Simply erasing files or deleting partitions does not guarantee complete removal; sensitive data may still be recoverable.
+
+(D) Destruction: Physically destroying the workstation ensures data removal but is often not cost-efficient or necessary if proper sanitization techniques are applied.
+
+Overall Explanation:
+Sanitization is the recommended practice for securely handling end-of-life workstations, particularly when they store sensitive or proprietary information. It balances security with cost-effectiveness, ensuring data confidentiality without unnecessarily destroying functional hardware.
+
+</details>
+
+---
+
+25. In a corporate IT environment where data storage and management are critical for business operations, what shared challenge do spare sectors and bad sectors present on traditional hard drives, alongside the overprovisioned space allocated on solid-state drives (SSDs)?
+
+(A) They may not be degaussed, resulting in data remanence
+(B) They may not be overwritten, resulting in corrupted data
+(C) They may not be formatted
+(D) They may not be cleared, resulting in data remanence
+
+<details> <summary>Show answer</summary>
+
+Correct Answer: (D) They may not be cleared, resulting in data remanence
+
+Explanation:
+Spare sectors and bad sectors on traditional HDDs, as well as overprovisioned space on SSDs, may not be properly cleared during standard data wiping operations. This can leave residual data on the storage device, known as data remanence, which poses a security risk if sensitive information remains recoverable.
+
+Incorrect Answers:
+
+(A) They may not be degaussed: Degaussing only works for magnetic media (HDDs) and is ineffective for SSDs. It also doesn’t address overprovisioned or bad sectors.
+
+(B) They may not be overwritten, resulting in corrupted data: While overwriting is a data-erasure method, these areas require specialized clearing techniques. Not overwriting them does not corrupt data; it leaves residual data.
+
+(C) They may not be formatted: Formatting prepares a drive for use but does not guarantee that all sectors—including bad, spare, or overprovisioned space—are cleared.
+
+Overall Explanation:
+Certain sectors and overprovisioned areas of storage devices may remain inaccessible to conventional erasure methods, making specialized data-clearing procedures necessary. On SSDs, wear leveling and overprovisioned space can hide residual data even after standard wipes, highlighting the need for secure sanitization techniques tailored to the storage medium.
+
+</details>
